# translib

./: .gitignore  ChangeLog  Makefile.am  README  configure.ac
doc/: Makefile.am  edoc-info.in  overview.edoc  stylesheet.css
ebin/: Makefile.am  translib.app.in
include/: Makefile.am
src/: Emakefile.in  Makefile.am  clone_module.erl  gen_trans.erl  lambda_expr.erl  multiparser.erl  recfun.erl  transhell.erl
testsuite/: Makefile.am  etest.in  test_lambda_expr.erl  test_multiparser.erl  test_recfun.erl
